# kenya_steller

./: Cargo.toml  README.md
src/: lib.rs  storage.rs  test.rs
stellar-sep41-token/: Cargo.toml
test_snapshots/test/: test_approve_and_transfer_from.1.json  test_burn.1.json  test_burn_from.1.json  test_initialize.1.json  test_mint.1.json  test_transfer.1.json
